# python-ffmpegio-plugin-mpl

./: .gitmodules  CHANGELOG.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: test_n_pub.yml
sandbox/: so73726025.py  so78714317.py
src/ffmpegio_plugin_mpl/: __init__.py
tests/: requirements.txt  test_base.py
