[metadata]
name = ffmpegio-plugin-mpl
version = attr: ffmpegio_plugin_mpl.__version__
description = ffmpegio plugin to create videos from matploglib Figures
long_description_content_type = text/x-rst
long_description = file: README.rst
keywords = multimedia, ffmpeg, matplotlib
license = GPL-2.0 License
url=https://python-ffmpegio.github.io/python-ffmpegio
project_urls=
    Repository=https://github.com/python-ffmpegio/python-ffmpegio
    Discussions=https://github.com/python-ffmpegio/python-ffmpegio/discussions
    Issues=https://github.com/python-ffmpegio/python-ffmpegio/issues
    Pull Requests=https://github.com/python-ffmpegio/python-ffmpegio/pulls
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
install_requires =
    ffmpegio-core >= 0.3
python_requires = >=3.7,
packages=ffmpegio_plugin_mpl

[options.entry_points]
ffmpegio =
    rawdata_mpl = ffmpegio_plugin_mpl
